--- a/html/index.html
+++ b/html/index.html
@@ -20,10 +20,12 @@
         <div class="continer">
             <a href="#" class="logo">Elzero</a>
             <ul class="list">
-                <li><a href="#Articles">Articles</a></li>
-                <li><a href="#GALLERY">Gallery</a></li>
-                <li><a href="#FEATURES">Features</a></li>
-                <li class="drop-list">Other Links
+                <li><span class="line"></span><a href="#Articles">Articles</a></li>
+                <li><span class="line"></span><a href="#GALLERY">Gallery</a></li>
+                <li><span class="line"></span><a href="#FEATURES">Features</a></li>
+                <li class="drop-list">
+                    <span class="line"></span>
+                    Other Links
                     <div class="drop-list-content">
                         <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/megamenu.png" alt="poto">
                         <div class="drop-list-ul">
