--- a/html/index.html
+++ b/html/index.html
@@ -11,8 +11,8 @@
     <script src="https://kit.fontawesome.com/85915fb54c.js" crossorigin="anonymous"></script>  
     <!-- main style -->
     <link rel="stylesheet" href="css\main-style.css">
-    <!-- Normalize.css v8.0.1 -->
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <!-- Normalize.css v8.0.1
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"> -->
 </head>
 <body>
     <!-- start header -->
@@ -50,5 +50,108 @@
         </div>
     </header>
     <!-- end header -->
+
+    <!-- start home -->
+        <section class="home">
+            <div class="continer">
+                <div class="txt">
+                    <h1>Welcome, To Elzero World</h1>
+                    <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
+                </div>
+                <img src="/elzero-template3/html/poto/landing-image.png" alt="">
+            </div>
+            <a href="#Articles"><i class="fa-solid fa-angles-down next"></i></a>
+        </section>
+    <!-- end home -->
+
+<!-- start ARTICLES -->
+        <section class="articl" id="Articles">
+            <div class="continer">
+                <h2 class="heading-section">ARTICLES</h2>
+                <div class="articl-cont">
+                    <div class="card">
+                        <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-01.jpg" alt="">
+                        <div class="card-text">
+                            <h3>Test Title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit  consectetur.</p>
+                        </div>
+                        <div class="card-fotter">
+                            <a href="#">Read me<i class="fa-solid fa-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-02.jpg" alt="">
+                        <div class="card-text">
+                            <h3>Test Title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit  consectetur.</p>
+                        </div>
+                        <div class="card-fotter">
+                            <a href="#">Read me<i class="fa-solid fa-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-03.jpg" alt="">
+                        <div class="card-text">
+                            <h3>Test Title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit  consectetur.</p>
+                        </div>
+                        <div class="card-fotter">
+                            <a href="#">Read me<i class="fa-solid fa-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-04.jpg" alt="">
+                        <div class="card-text">
+                            <h3>Test Title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit  consectetur.</p>
+                        </div>
+                        <div class="card-fotter">
+                            <a href="#">Read me<i class="fa-solid fa-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-05.jpg" alt="">
+                        <div class="card-text">
+                            <h3>Test Title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit  consectetur.</p>
+                        </div>
+                        <div class="card-fotter">
+                            <a href="#">Read me<i class="fa-solid fa-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-06.jpg" alt="">
+                        <div class="card-text">
+                            <h3>Test Title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit  consectetur.</p>
+                        </div>
+                        <div class="card-fotter">
+                            <a href="#">Read me<i class="fa-solid fa-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-07.jpg" alt="">
+                        <div class="card-text">
+                            <h3>Test Title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit  consectetur.</p>
+                        </div>
+                        <div class="card-fotter">
+                            <a href="#">Read me<i class="fa-solid fa-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-08.jpg" alt="">
+                        <div class="card-text">
+                            <h3>Test Title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit  consectetur.</p>
+                        </div>
+                        <div class="card-fotter">
+                            <a href="#">Read me<i class="fa-solid fa-right-long"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- end ARTICLES -->
 </body>
 </html>
