--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@
                     <h1>Welcome, To Elzero World</h1>
                     <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
                 </div>
-                <img src="/elzero-template3/html/poto/landing-image.png" alt="">
+                <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/landing-image.png" alt="">
             </div>
             <a href="#Articles"><i class="fa-solid fa-angles-down next"></i></a>
         </section>
